--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,16 @@ body {
   align-items: center;
   font-size: 1.5rem;
 }
+
+.score {
+  font-size: 6rem;
+  border-radius: 16px;
+}
+
+.score-success {
+  text-shadow: 0px 0px 9px #198754;
+}
+
+.score-danger {
+  text-shadow: 0px 0px 9px #dc3545;
+}
