adding body background and white background for content
- add bg.jpeg image to be a background

- set body background and height to fill the whole view port

- add background white and border to content to make more visible

- remove main container padding and add it to the body to make username comp overlay to fill view port

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url("media/bg.jpeg") center center no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  padding: 2rem 0;
 }
 
 .App {
